--- a/src/timeline/Suggestions.css
+++ b/src/timeline/Suggestions.css
@@ -1,48 +1,53 @@
-.suggestions {
-  margin-top: 30px;
-  margin-right: 20px;
+.suggestions{
+    margin-top: 30px;
+    margin-right: 20px;
+}
+.suggestions__title{
+    color: gray;
+    font-weight: bold;
 }
 
-.suggestions__title {
-  color: grey;
-  font-weight: bold;
+.username__lift {
+     display: flex;
+     align-items: center;
+
 }
 
-.username__left {
-  display: inline-flex;
+.username__info{
+    display: flex;
+    flex-direction: column;
 }
 
-.username__info {
-  display: flex;
-  flex-direction: column;
-  margin-left: 7px;
+.relation{
+    color: gray;
+    font-size: 12px;
 }
 
-.relation {
-  color: grey;
-  font-size: 12px;
+.suggestions__username{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 15px;
+
 }
 
-.suggestions__username {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 15px;
+.follow__button{
+    color: #0095f6;
+    font-weight: bold;
+    background: 0;
+    border: 0;
 }
 
-.follow__button {
-  color: #0095f6;
-  font-weight: bold;
-  background: 0;
-  border: 0;
-  margin-right: 5px;
+.follow__button:hover{
+    color: white;
+    cursor: pointer;
 }
 
-.follow__button:hover {
-  color: white;
-  cursor: pointer;
+.username{
+    font-weight: 600;
+    font-size: 14px;
 }
 
-.username {
-  font-weight: 600;
-  font-size: 14px;
+.avatar {
+    margin-right: 10px;
 }
